Enhance Nusantara Journal Modal with Font Awesome icons and improved CSS styles

--- a/plugins/generic/nusantarajournalmodal/locale/en/locale.po
+++ b/plugins/generic/nusantarajournalmodal/locale/en/locale.po
@@ -43,7 +43,7 @@ msgid "plugins.generic.nusantarajournalmodal.settings.doi"
 msgstr "Current issue DOI or identifier"
 
 msgid "plugins.generic.nusantarajournalmodal.settings.license"
-msgstr "License & APC information"
+msgstr "License & APC"
 
 msgid "plugins.generic.nusantarajournalmodal.settings.primaryLabel"
 msgstr "Primary action label"
